Fixed padding on mobile.

--- a/css/css.css
+++ b/css/css.css
@@ -111,7 +111,6 @@ p {
 		left: 0;
 		right: 0;
 		background: #fff;
-		padding: 10%;
 	}
 }
 
